# mapf_bench

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml  repos.yaml
.github/workflows/: ci.yaml
docker/: Dockerfile  compose.yaml
docker/scripts/: test.sh
examples/plugins/: greedy.yaml  primal2.yaml  random.yaml  wait.yaml
examples/render/: ascii.yaml  ci_ascii.yaml  gui.yaml
examples/scenarios/: two_agents_swap.yaml
mapf_bench/: pyproject.toml
mapf_bench/runs/wait_test/: metrics.json  replay.json
mapf_bench/src/mapf_bench/: cli.py
mapf_bench/src/mapf_bench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mapf_bench/src/mapf_bench/core/: solver.py
mapf_bench/src/mapf_bench/solvers/: random_solver.py
mapf_bench/tests/: test_simulator.py
src/mapf_bench/: cli.py
src/mapf_bench/core/: metrics.py  problem.py  simulator.py
src/mapf_bench/io/: replay.py  scenarios.py
src/mapf_bench/plugins/: __init__.py  base.py  builtin.py  config.py  loader.py
src/mapf_bench/render/: ascii.py  config.py  pygame_gui.py
src/mapf_bench/solvers/: __init__.py  greedy_solver.py  wait_solver.py
tests/: test_ascii_renderer.py  test_plugin_loader.py  test_scenarios.py  test_simulator.py
tests/integration/: test_external_primal2_plugin.py
