[project]
name = "mapf-bench"
version = "0.1.0"
description = "Benchmark harness for multi-agent path finding solvers"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "typer>=0.12.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
gui = [
  "pygame>=2.5.0",
]


[project.scripts]
mapf-bench = "mapf_bench.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: tests requiring optional external plugins",
]